# rust_lcd

rust_lcd/: Cargo.toml  README.md  memory.x  openocd.gdb
rust_lcd/src/: lcd.rs  main.rs
